# pytg

./: .gitignore  LICENSE  README.md  dev.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  release.yml
assets/: screenshot_snake_game.mov
src/: main.py
src/module_1/: hello.py
src/snake/: config.py  game.py  snake.py
src/tetris/: config.py  game.py
src/util/: __init__.py  block.py  config.py  menu.py
tests/: test_hello.py  test_snake.py  test_tetris.py
tests/snake/: conftest.py  test_game.py
tests/tetris/: conftest.py  test_game.py
tests/util/: conftest.py  test_block.py  test_menu.py
