[tool.poetry]
name = "pytg"
version = "1.0.0"
description = ""
authors = ["tingwei628"]
repository = "https://github.com/tingwei628/pytg"
packages = [
    { include = "src"}
    # { include = "snake", from = "src" }, # snake in src/
]
# exclude = ["tests/"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# black = "^21.6b0"
# flake8 = "^3.9.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
